# CrimeRecordDashboard

./: .gitignore  .replit  README.md  pyproject.toml  replit.md  requirements.txt  showcase.html
attached_assets/: Pasted--Drop-and-Create-Database-DROP-DATABASE-IF-EXISTS-CrimeRecord-CREATE-DATABASE-CrimeRecord-USE-Cr-1747815083904.txt
crimerecord/: crimerecord.sqlite3  manage.py
crimerecord/crime_management/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
crimerecord/crime_management/management/commands/: populate_dummy_data.py
crimerecord/crime_management/migrations/: 0001_initial.py
crimerecord/crime_management/static/css/: style.css
crimerecord/crime_management/static/js/: charts.js  main.js
crimerecord/crime_management/templates/: base.html  crime_types.html  crimes.html  criminals.html  dashboard.html  dashboard_charts.html  fir_details.html  login.html  officers.html  police_stations.html  profiles.html  register.html  settings.html  users.html  welcome.html
crimerecord/crime_management/templates/form_templates/: crime_form.html  crime_type_form.html  criminal_form.html  fir_form.html  officer_form.html  station_form.html
crimerecord/crimerecord/: asgi.py  settings.py  urls.py  wsgi.py
