[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django-crispy-forms>=2.4",
    "django>=5.2.1",
    "pillow>=11.2.1",
    "django-widget-tweaks>=1.5.0",
    "mysqlclient>=2.2.7",
    "python-dateutil>=2.9.0.post0",
]
